2009-05-14  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=24510 where

        Add testHasProperty and testHasMethod to the existing functions
        of the PluginObject to be able to test the browser hasproperty
        and hasmethod implementation. Invoke them from pluginInvoke.

        Change the defines to an enum to avoid manually updating
        NUM_METHOD_IDENTIFIERS and assigning numbers.

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (testHasProperty): test hasproperty
        (testHasMethod): test hasmethod
        (pluginInvoke): invoke the two

2009-05-20  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by George Staikos.

        BUG 25843: [Qt] Remove qt-port build flag
        <https://bugs.webkit.org/show_bug.cgi?id=25843>

        * DumpRenderTree/qt/DumpRenderTree.pro:
        * Scripts/webkitdirs.pm:

2009-05-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        Remove layoutTestController.addFileToPasteboardOnDrag and add eventSender.beginDragWithFiles
        https://bugs.webkit.org/show_bug.cgi?id=25852

        This allows us to now test multi-file file drags in DumpRenderTree per:
        https://bugs.webkit.org/show_bug.cgi?id=25862

        I removed the existing tests using addFileToPasteboardOnDrag()
        and replaced them with a new test (editing/pasteboard/file-input-files-access)
        which covers several more drag-drop cases.

        I added a DumpRenderTreeFileDraggingSource class to avoid
        the hack of if (!draggingSource) in [DumpRenderTreeDraggingInfo draggingSourceOperationMask]

        New Test: editing/pasteboard/file-input-files-access.html

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
        * DumpRenderTree/DumpRenderTreeFileDraggingSource.h: Added.
        * DumpRenderTree/DumpRenderTreeFileDraggingSource.m: Added.